<resources>
    <string name="app_name">NOVA CRM</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="notifications">Notifications</string>
    <string-array name="dealer_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/nav_item_deals</item>
        <item>@string/nav_item_products</item>
        <item>@string/nav_item_orders</item>
        <item>Bank Information</item>
        <item>@string/receivedorders</item>
        <item>@string/nav_item_trackorder</item>
        <item>@string/invoice</item>
        <item>@string/wallet</item>
        <item>@string/notifications</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="finance_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/dashboard</item>
        <item>@string/managedispachers</item>
        <item>@string/managetransport</item>
        <item>Invoice</item>
        <item>@string/notifications</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="managedispachers">Manage Dispatchers</string>
    <string name="managedeliveryboys">Manage Delivery Boys</string>
    <string name="managesalesexecutives">Manage Sales Executives</string>
    <string name="managedealers">Manage Dealers</string>
    <string name="managetransport">Manage Transport</string>
    <string name="orders">Orders</string>
    <string name="reports">Reports</string>
    <string name="trackdealers">Track Dealers</string>
    <string name="receivedorders">Received Orders</string>
    <string name="managefinancemanager">Manage Depot Manager</string>
    <string name="managebranches">Manage Branches</string>
    <string name="dashboard">Dashboard</string>
    <string-array name="admin_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/dashboard</item>
        <item>@string/managefinancemanager</item>
        <item>Invoice</item>
        <item>Manage Grade</item>
      
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="superadmin_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/dashboard</item>
        <item>@string/managebranches</item>
        <item>Manage Finance Admin</item>
        <item>Discounts Request</item>
        <item>Invoice</item>
       
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="franchisor_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/nav_item_dailyorders</item>
        <item>@string/nav_item_managestores</item>
        <item>@string/nav_item_deliveredorders</item>
        <item>@string/nav_item_cancelledorders</item>
        <item>@string/nav_item_reports</item>
        <item>@string/nav_item_empreport</item>
        <item>@string/nav_item_addstores</item>
        <item>@string/nav_item_salesreport</item>
        <item>@string/nav_item_registration</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="executive_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>Task Done</item>
        <item>Task to do</item>
        <item>Start Task</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="nav_item_newstore">Approve Store</string>
    <string name="nav_item_dailyorders">Daily Orders</string>
    <string name="nav_item_managestore">Manage Stores</string>
    <string name="nav_item_empreport">Employee Report</string>
    <string name="nav_item_franchisor">Franchisor</string>
    <string name="nav_item_salesreport">Sales Report</string>
    <string name="nav_item_registration">Registration</string>
    <string-array name="picker_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/pickuporders</item>
        <item>@string/pickuphistory</item>
        <item>@string/invoice</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="pickuporders">Pickup Orders</string>
    <string name="pickuphistory">Pickup History</string>
    <string name="ordershistory">Orders History</string>
    <string-array name="delivery_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/pickuporders</item>
        <item>@string/pickuphistory</item>
        <item>@string/deliveryorders</item>
        <item>@string/deliveryhistory</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="sales_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/nav_item_deals</item>
        <item>@string/nav_item_products</item>
        <item>@string/nav_item_orders</item>
        <item>Discounts</item>
        <item>Discounts Request</item>
        <item>Dealers List</item>
        <item>@string/dealerreg</item>
        <item>@string/invoice</item>
        <item>@string/receivedorders</item>
        <item>Track orders</item>
        <item>@string/wallet</item>
        <item>@string/notifications</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="dealerreg">Dealer Registration</string>
    <string name="deliveryorders">Delivery Orders</string>
    <string name="deliveryhistory">Delivery History</string>
    <string-array name="seller_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/nav_item_deals</item>
        <item>@string/nav_item_products</item>
        <item>@string/nav_item_orders</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string-array name="dispatch_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/packorders</item>
        <item>@string/packhistory</item>
        <item>@string/deliveryorders</item>
        <item>@string/deliveryhistory</item>
        <item>Rejected History</item>
        <item>Invoice</item>
        <item>@string/managetransport</item>
        <item>Manage LR Number</item>
      
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="complaints">Complaints</string>
    <string name="packorders">Pack Orders</string>
    <string name="packhistory">Pack History</string>
    <string-array name="hr_nav_drawer_labels">
        <item>@string/nav_item_myprofile</item>
        <item>@string/hr_employee_registration</item>
        <item>@string/hr_store_registration</item>
        <item>@string/hr_franchise_registration</item>
        <item>@string/nav_item_changepswrd</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="invoice">Invoice</string>
    <string name="wallet">Wallet</string>
    <string name="nav_item_report">Report</string>
    <string name="nav_item_history">History</string>
    <string name="hr_employee_registration">Employee Registration</string>
    <string name="hr_store_registration">Store Registration</string>
    <string name="hr_franchise_registration">Franchisor Registration</string>
    <string name="nav_item_orders_placed">Orders Placed</string>
    <string name="nav_item_orders_picked">Orders Picked</string>
    <string name="delivery_orders_list">Orders List</string>
    <string name="checkin_out">CheckIn/Out</string>
    <string name="delivery_orderslist_list">Delivery Orders List</string>
    <string name="delivery_processlist_list">Start Process</string>
    <string name="nav_item_myprofile">Profile</string>
    <string name="nav_item_deals">Home</string>
    <string name="nav_item_products">Products</string>
    <string name="nav_item_orders">Orders</string>
    <string name="nav_item_trackorder">Track Order</string>
    <string name="nav_item_complaints">Complaint</string>
    <string name="nav_item_feedback">Feedback</string>
    <string name="nav_item_changepswrd">Change Password</string>
    <string name="nav_item_signout">Sign out</string>
    <string name="nav_item_cancelhistory">Cancel History</string>
    <string name="nav_item_processhistory">Processed History</string>
    <string name="nav_item_addmanagepincodes">Add/Manage Pincodes</string>
    <string name="nav_item_addstores">Add Stores</string>
    <string name="nav_item_managestores">Manange Stores</string>
    <string name="nav_item_deliveredorders">Delivered Orders</string>
    <string name="nav_item_cancelledorders">Cancelled Orders</string>
    <string name="nav_item_reports">History</string>
    <string name="nav_item_ordershistory">Orders History</string>
    <string name="nav_item_stores">Stores</string>
    <string name="server_error">Couldn\'t connect server.Please try again</string>
    <string name="networkerror">Please check your internet connection</string>
    <string name="mobile">Mobile*</string>
    <string name="enterotptxt">Enter OTP</string>
    <string name="enterotp">Enter OTP*</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="products">Products</string>
    <string name="enterfourdigitpin">Enter 4 Digit Secret Pin</string>
    <string name="reenterfourdigitpin">Re-enter 4 Digit Secret Pin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_securepin">Enter secure PIN</string>
    <string name="new_regiseter">New to My Store? Register Here....</string>
    <string name="select_product">Select Product</string>
    <string name="location_txt">Location</string>
    <string name="todaydeals">Today Deals</string>
    <string name="offerdeals">Offer Deals</string>
    <string name="hotdeals">Hot Deals</string>
    <string name="about_us">About us</string>
    <string name="videos">Videos</string>
    <string name="forgotpin">Forgot Password?</string>
    <string name="requestpwd">Request Password?</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="placed">Placed</string>
    <string name="total_items">Total Items</string>
    <string name="total_units">Total Units</string>
    <string name="service_charge">Charges</string>
    <string name="total_pay">Total Pay</string>
    <string name="subtotal_pay">Sub Total</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="no_data">No Data Found</string>
    <string name="declartion"><u>Declaration </u>:</string>
    <string name="declarationtext">We declare that this invoice shows the actual price of the goods described and that all particulars are true and correct and that my /our Registration Under GST Act  -2017 is valid on the date  of this bill.</string>
    <string name="termsconditions"><u>Terms and Conditions </u>:</string>
    <string name="termsfirstpoint">All Goods  returned for replacement must be in Saleable Condition  with Original Packing.</string>
    <string name="termssecondpoint">We are not responsible for any transit damage, loss or Leakage.</string>
    <string name="termsthirdpoint">24% PA Interest will be  Charged for the Delayed payment.</string>
    <string name="ourvision">Our Vision</string>
    <string name="ourmission">Our Mission</string>
    <string name="aboutus">About Us:</string>
    <string name="cmdmessage">CMD Message</string>
</resources>