<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/appbackground"
            android:textSize="25sp" />
    </LinearLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ourvision_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourvision"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ourvisionval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/light_black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ourmission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ourmission"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ourmissionval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/aboutus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/aboutus"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutusval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_black"
                android:textSize="13sp" />

           <!-- <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/aboutusval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_black"
                android:textSize="13sp"/>-->


            <TextView
                android:id="@+id/cmdmessage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cmdmessage"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:textStyle="bold" />

           <TextView
                android:id="@+id/cmdmessageval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_black"
                android:textSize="13sp" />
         <!--   <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/cmdmessageval_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_black"
                android:textSize="13sp" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
