<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/include_actionbar"
        layout="@layout/layout_cartlist_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/rel_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rel_footer"
        android:layout_below="@+id/include_actionbar">

        <TextView
            android:id="@+id/text_nodata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/appbackground"
            android:textSize="@dimen/cart_recyclerview_txtsize"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/imgrel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                android:id="@+id/imageview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/nosellersfound"/>
        </RelativeLayout>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cart_recyclerview_linearmbtm"
            android:orientation="horizontal"
            android:weightSum="6"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalcost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />

                <TextView
                    android:id="@+id/items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/appbackground"
                    android:textSize="@dimen/cart_recyclerview_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/totalunits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_units"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />
                <TextView
                    android:id="@+id/units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/appbackground"
                    android:textSize="@dimen/cart_recyclerview_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/totalsavings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=" Your Profit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />

                <TextView
                    android:id="@+id/savings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/cart_recyclerview_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/subtotalpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/subtotal_pay"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />

                <TextView
                    android:id="@+id/subtotalpayval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/servicecharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/service_charge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />

                <TextView
                    android:id="@+id/s_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/cart_recyclerview_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/totalpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_pay"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cart_recyclerview_textsize" />
                <TextView
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@color/appbackground">

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.95"
                    android:background="@color/appbackground"
                    android:text="@string/continue_shopping"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"></View>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_checkout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.95"
                    android:background="@color/appbackground"
                    android:text="@string/checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>